--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
         <div id="listaEquipamentos">
             </div>
     </div>
+	
+	<div id="listaEquipamentos">
+            </div>
+
+        <hr>
+        <h3>📜 Histórico de Movimentações</h3>
+        <div id="historicoLogs" class="card" style="font-size: 0.85em; max-height: 200px; overflow-y: auto;">
+            </div>
+    </div>
 
     <script type="module" src="script.js"></script>
 </body>
