--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estoque Pro - Eletrônicos</title>
+    <title>Estoque - Eletrônicos</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <div class="container">
-        <h2>📦 Gestão de Estoque Profissional</h2>
+        <h2>📦 Gestão de Estoque</h2>
         
         <div class="card">
             <h3>Novo Equipamento</h3>
@@ -25,12 +25,7 @@
             <input type="text" id="inputBusca" placeholder="🔍 Buscar por nome...">
         </div>
 
-        <div id="listaEquipamentos">
-            </div>
-    </div>
-	
-	<div id="listaEquipamentos">
-            </div>
+        <div id="listaEquipamentos"></div>
 
         <hr>
         <h3>📜 Histórico de Movimentações</h3>
