--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estoque - Eletrônicos</title>
+    <title>Estoque - Movimento</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -36,3 +36,4 @@
     <script type="module" src="script.js"></script>
 </body>
 </html>
+
